{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "40dfd4d7-2459-4ab3-ac0e-0f87f3c8f735",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "31f540a7-5ab2-4f78-9c68-7a01daf07c2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "eb2d2e0e-995e-46ba-abc2-7eca2cc45654",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "bdcc3ab0-ef15-4919-a961-b453478ea8fc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bb7db729-c526-4b61-a0c8-85ea45763853",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6d28659e-2119-41e0-9232-b441f9f0d3a8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "84a4c7b6-5f29-47d0-a12b-4bebc4d1072a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}